...
            bottom = 16.dp
        ),
        verticalArrangement = Arrangement.spacedBy(12.dp),
        modifier = Modifier
            .background(colorResource(id = R.color.white))
            .fillMaxHeight()
            .testTag("option_list_column")
    )
    {
        items(options) { option ->
            OptionCard(
                option = option,
                clickCallback = {
...
    onPrepareOptionData: (Option?, Long) -> Unit,
    onConfigureOptionForm: () -> Unit,
    scope: CoroutineScope,
    scaffoldState: BackdropScaffoldState
) {
    FloatingActionButton(
        modifier = Modifier.testTag("option_list_floating_button"),
        onClick = {
            openOptionForm(
                null,
                electionId,
                onPrepareOptionData,
                onConfigureOptionForm,
...
    val scope = rememberCoroutineScope()


    val actions = mutableListOf<MenuAction>().apply {
        add(MenuAction(
            imageVector = Icons.Default.Edit,
            testTag = "menu_button_edit"
        ) {
            coroutineScope.launch {
                openElectionForm(
                    electionId,
                    onPrepareElectionData,
                    screenState,
...
                )
            }
        })
        add(
            MenuAction(
                imageVector = Icons.Default.Delete,
                testTag = "menu_button_delete"
            ) { screenState.showDeleteDialog() })
    }

    BackHandler {
        navigateBack(scaffoldState, scope, onBackNavigation, onBackToHome)
    }
...
