...

@OptIn(ExperimentalComposeUiApi::class)
@Composable
fun DeleteAlertDialog(closeCallBack: () -> Unit, acceptCallBack: () -> Unit) {
    AlertDialog(
        modifier = Modifier
            .testTag("delete_dialog"),
        onDismissRequest = closeCallBack,
        title = { Text(stringResource(id = R.string.delete_question)) },
        text = {
            Column {
                Text(stringResource(R.string.delete_disclaimer))
                Image(
...
                    modifier = Modifier.padding(top = 10.dp)
                )
            }
        },
        confirmButton = {
            Button(
                modifier = Modifier.testTag("delete_dialog_forget"),
                onClick = {
                    closeCallBack()
                    acceptCallBack()
                }) {
                Text(stringResource(R.string.forget))
            }
        },
        dismissButton = {
            Button(
                modifier = Modifier.testTag("delete_dialog_keep"),
                onClick = closeCallBack
            ) {
                Text(stringResource(R.string.keep))
            }
        },
        backgroundColor = colorResource(id = R.color.white)
...
