...
                maxLines = 2
            )

            Spacer(Modifier.weight(1f))

            IconButton(
                modifier = Modifier.testTag("option_card_expand_button"),
                onClick = { expanded = !expanded }) {
                if (!expanded) {
                    Icon(
                        Icons.Default.KeyboardArrowDown,
                        contentDescription = "",
                        tint = colorResource(id = R.color.light_text)
...
                .padding(
                    top = 8.dp,
                    start = 10.dp,
                    end = 6.dp,
                    bottom = if (showBottomMargin) 0.dp else 10.dp
                )
                .testTag("option_card_matching_conditions_row"),
            mainAxisAlignment = MainAxisAlignment.Start,
            mainAxisSize = SizeMode.Expand,
            crossAxisSpacing = 5.dp,
            mainAxisSpacing = 5.dp,
        ) {
            conditions.sortedByDescending { condition -> condition.weight }
...
    fun DeleteButton(deleteCallBack: (() -> Unit)?) {

        val colTitle = colorResource(id = R.color.yellow_800)

        deleteCallBack?.let {
            Button(
                modifier = Modifier.testTag("option_card_delete_button"),
                onClick = { deleteCallBack() },
                colors = ButtonDefaults.buttonColors(
                    backgroundColor = Color.Transparent
                ),
                elevation = ButtonDefaults.elevation(
                    defaultElevation = 0.dp,
...
